from frontend side added axios post request for user registration , tested and it works
