# src/routes/blog-router.js
@@ -5,8 +5,8 @@ import { postCreateBlog } from "../controllers/createBlog-controller.js";
 import { getBlogByID } from "../controllers/returnBlogByID-controller.js";
 import { getAllBlogs } from "../controllers/returnAllBlogs-constoller.js";
 import verifyToken from "../middlewares/auth-middleware.js";
-import { getAllBlogsByCategory } from "../controllers/returnAllBlogsByCategory-controller.js";
 import multer from "multer";
+
  
 
 
@@ -39,7 +39,7 @@ blogRouter.post("/create-blog", verifyToken, multer({storage:fileStorage, fileFi
 
 blogRouter.get("/blogs/:id", getBlogByID);
 blogRouter.get("/blogs",verifyToken, getAllBlogs);
-blogRouter.get("/blogs/:category", getAllBlogsByCategory);
+
 
 
 
